--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <div class="result">
                 </div>
 
+                <div class="error-div display">
+                    <h1 class="error">No Internet Connection</h1>
+                </div>
+
                 <template>
                     <div class="part-of-speech-div">
                         <h2 class="part-of-speech"></h2>
